syntax = "proto3";

package cars;

option go_package = "github/api-gateway/gen/cars";

import 'google/api/annotations.proto';
import 'google/protobuf/empty.proto';

service CarsService {
  rpc GetAll(google.protobuf.Empty) returns (CarsList) {
//    option (google.api.http) = {
//      get: "/v1/cars"
//    };
  }
  rpc GetOne(OneCarRequest) returns (OneCars) {
//    option (google.api.http) = {
//      get: "/v1/cars/{id}"
//    };
  }
  rpc Create(CreateCarRequest) returns (OneCars) {
//    option (google.api.http) = {
//      post: "/v1/cars"
//      body: "*"
//    };
  }
  rpc Update(UpdateCarRequest) returns (OneCars) {
//    option (google.api.http) = {
//      patch: "/v1/cars"
//      body: "*"
//    };
  }
}

message Car {
  int32 id = 1;
  string name = 2;
  int32 price = 3;
}

message CarsList {
  repeated Car cars = 1;
}

message OneCars {
  Car car = 1;
}

message OneCarRequest {
  int32 id = 1;
}

message CreateCarRequest {
  string name = 1;
  int32 price = 2;
}

message UpdateCarRequest {
  int32 id = 1;
  string name = 2;
  int32 price = 3;
}



